# ToxiPred

./: .env.example  .env.prod.example  .gitignore  ADVANCED.md  DOCS.md  Kvant_I_Q_measurements.ipynb  Makefile  README.md  RF.ipynb  RF_vitro_corrosion.ipynb  RF_vitro_irritation.ipynb  RFfp.ipynb  RFfp_ds.ipynb  RFfp_ds_3d.ipynb  RFfp_ds_chemico_humolumo.ipynb  RFfp_ds_chemico_xsmiles.ipynb  RFfp_ds_vitro.ipynb  RFfp_ds_vivo.ipynb  RFfp_ds_xsmiles.ipynb  SETUP.md  docker-compose.prod.yml  docker-compose.yml  modelLinearReg.ipynb  modelLinearRegwithFingerPrint.ipynb  modelRandomForest.ipynb
server-toxipred/: Dockerfile  pyproject.toml
server-toxipred/app/: create_tables.py  dataset_preprocessing.ipynb  dataset_preprocessing_fingerprint.ipynb  db.py  desc_svm_qsar.ipynb  fill_pka_new_datasets_local.py  in_chemico_dataset.xlsx  in_chemico_dataset_clean.csv  in_chemico_dataset_processed.xlsx  in_chemico_x_test.csv  in_chemico_x_train.csv  intro.ipynb  main.py  preprocessing_pipeline.py  readme.txt  shap_explain.ipynb  svm_base.ipynb  svm_comb_opt_chemico.ipynb  svm_comb_opt_test copy.ipynb  svm_comb_opt_test.ipynb  svm_comb_opt_vitro_3D.ipynb  svm_comb_opt_vivo.ipynb  svm_desc_opt copy.ipynb  svm_desc_opt.ipynb  svm_fngpt_opt.ipynb  svm_irritation_corrosion.ipynb  svm_irritation_corrosion_fixed.ipynb  verify_moka_quality.py  xgb_comb_opt.html  xgb_comb_opt.ipynb  xgb_comb_opt_3d.ipynb  xgb_comb_opt_chemico.ipynb  xgb_comb_opt_test.ipynb  xgb_comb_opt_vitro.ipynb  xgb_comb_opt_vivo.ipynb  xgb_desc_fngpt_test_3d.ipynb  xgb_desc_fngpt_test_chemico.ipynb  xgb_desc_opt.html  (+11 more)
(+247 files in other folders)
